--- a/LibraryManagementSystem/appsettings.json
+++ b/LibraryManagementSystem/appsettings.json
@@ -5,9 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-  //"ConnectionStrings": {
-  //    "DbConnection": "Data Source=.;Initial Catalog=LibraryManagement;User ID=sa;Password=sasa@123;TrustServerCertificate=True;"
-  //  }
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+      "DbConnection": "Data Source=.;Initial Catalog=LibraryManagement;User ID=sa;Password=sasa@123;TrustServerCertificate=True;"
+    }
   }
-}
+
